docs/api/qiskit/0.28/qiskit.algorithms.QAOA.mdx
---
title: QAOA
description: API reference for qiskit.algorithms.QAOA
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.QAOA
---

# qiskit.algorithms.QAOA

<Class id="qiskit.algorithms.QAOA" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/algorithms/minimum_eigen_solvers/qaoa.py" signature="QAOA(optimizer=None, reps=1, initial_state=None, mixer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)" modifiers="class">
  The Quantum Approximate Optimization Algorithm.

  [QAOA](https://arxiv.org/abs/1411.4028) is a well-known algorithm for finding approximate solutions to combinatorial-optimization problems.

  The QAOA implementation directly extends [`VQE`](qiskit.algorithms.VQE "qiskit.algorithms.VQE") and inherits VQE’s optimization structure. However, unlike VQE, which can be configured with arbitrary ansatzes, QAOA uses its own fine-tuned ansatz, which comprises $p$ parameterized global $x$ rotations and $p$ different parameterizations of the problem hamiltonian. QAOA is thus principally configured by the single integer parameter, *p*, which dictates the depth of the ansatz, and thus affects the approximation quality.

  An optional array of $2p$ parameter values, as the *initial\_point*, may be provided as the starting **beta** and **gamma** parameters (as identically named in the original [QAOA paper](https://arxiv.org/abs/1411.4028)) for the QAOA ansatz.

  An operator or a parameterized quantum circuit may optionally also be provided as a custom mixer Hamiltonian. This allows, as discussed in [this paper](https://doi.org/10.1103/PhysRevApplied.5.034007) for quantum annealing, and in [this paper](https://arxiv.org/abs/1709.03489) for QAOA, to run constrained optimization problems where the mixer constrains the evolution to a feasible subspace of the full Hilbert space.

  **Parameters**

  *   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
  *   **reps** (`int`) – the integer parameter $p$ as specified in [https://arxiv.org/abs/1411.4028](https://arxiv.org/abs/1411.4028), Has a minimum valid value of 1.
  *   **initial\_state** (`Optional`\[`QuantumCircuit`]) – An optional initial state to prepend the QAOA circuit with
  *   **mixer** (`Union`\[`QuantumCircuit`, `OperatorBase`, `None`]) – the mixer Hamiltonian to evolve with or a custom quantum circuit. Allows support of optimizations in constrained subspaces as per [https://arxiv.org/abs/1709.03489](https://arxiv.org/abs/1709.03489) as well as warm-starting the optimization as introduced in [http://arxiv.org/abs/2009.10095](http://arxiv.org/abs/2009.10095).
  *   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then it will simply compute a random one.
  *   **gradient** (`Union`\[`GradientBase`, `Callable`\[\[`Union`\[`ndarray`, `List`]], `List`], `None`]) – An optional gradient operator respectively a gradient function used for optimization.
  *   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When None (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to True (defaults to False).
  *   **include\_custom** (`bool`) – When expectation parameter here is None setting this to True will allow the factory to include the custom Aer pauli expectation.
  *   **max\_evals\_grouped** (`int`) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Ignored if a gradient operator or function is given.
  *   **callback** (`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`], `None`]]) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.
  *   **quantum\_instance** (`Union`\[`Backend`, `BaseBackend`, `QuantumInstance`, `None`]) – Quantum Instance or Backend

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.QAOA.__init__" signature="__init__(optimizer=None, reps=1, initial_state=None, mixer=None, initial_point=None, gradient=None, expectation=None, include_custom=False, max_evals_grouped=1, callback=None, quantum_instance=None)">
    **Parameters**

    *   **optimizer** (`Optional`\[`Optimizer`]) – A classical optimizer.
    *   **reps** (`int`) – the integer parameter $p$ as specified in [https://arxiv.org/abs/1411.4028](https://arxiv.org/abs/1411.4028), Has a minimum valid value of 1.
    *   **initial\_state** (`Optional`\[`QuantumCircuit`]) – An optional initial state to prepend the QAOA circuit with
    *   **mixer** (`Union`\[`QuantumCircuit`, `OperatorBase`, `None`]) – the mixer Hamiltonian to evolve with or a custom quantum circuit. Allows support of optimizations in constrained subspaces as per [https://arxiv.org/abs/1709.03489](https://arxiv.org/abs/1709.03489) as well as warm-starting the optimization as introduced in [http://arxiv.org/abs/2009.10095](http://arxiv.org/abs/2009.10095).
    *   **initial\_point** (`Optional`\[`ndarray`]) – An optional initial point (i.e. initial parameter values) for the optimizer. If `None` then it will simply compute a random one.
    *   **gradient** (`Union`\[`GradientBase`, `Callable`\[\[`Union`\[`ndarray`, `List`]], `List`], `None`]) – An optional gradient operator respectively a gradient function used for optimization.
    *   **expectation** (`Optional`\[`ExpectationBase`]) – The Expectation converter for taking the average value of the Observable over the ansatz state function. When None (the default) an [`ExpectationFactory`](qiskit.opflow.expectations.ExpectationFactory "qiskit.opflow.expectations.ExpectationFactory") is used to select an appropriate expectation based on the operator and backend. When using Aer qasm\_simulator backend, with paulis, it is however much faster to leverage custom Aer function for the computation but, although VQE performs much faster with it, the outcome is ideal, with no shot noise, like using a state vector simulator. If you are just looking for the quickest performance when choosing Aer qasm\_simulator and the lack of shot noise is not an issue then set include\_custom parameter here to True (defaults to False).
    *   **include\_custom** (`bool`) – When expectation parameter here is None setting this to True will allow the factory to include the custom Aer pauli expectation.
    *   **max\_evals\_grouped** (`int`) – Max number of evaluations performed simultaneously. Signals the given optimizer that more than one set of parameters can be supplied so that potentially the expectation values can be computed in parallel. Typically this is possible when a finite difference gradient is used by the optimizer such that multiple points to compute the gradient can be passed and if computed in parallel improve overall execution time. Ignored if a gradient operator or function is given.
    *   **callback** (`Optional`\[`Callable`\[\[`int`, `ndarray`, `float`, `float`], `None`]]) – a callback that can access the intermediate data during the optimization. Four parameter values are passed to the callback as follows during each evaluation by the optimizer for its current set of parameters as it works towards the minimum. These are: the evaluation count, the optimizer parameters for the ansatz, the evaluated mean and the evaluated standard deviation.
    *   **quantum\_instance** (`Union`\[`Backend`, `BaseBackend`, `QuantumInstance`, `None`]) – Quantum Instance or Backend
  </Function>

  ## Methods

  |                                                                                                                                                        |                                                                                                       |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.QAOA.__init__ "qiskit.algorithms.QAOA.__init__")(\[optimizer, reps, initial\_state, …])                                | **type optimizer**`Optional`\[`Optimizer`]                                                            |
  | [`cleanup_parameterized_circuits`](#qiskit.algorithms.QAOA.cleanup_parameterized_circuits "qiskit.algorithms.QAOA.cleanup_parameterized_circuits")()   | set parameterized circuits to None                                                                    |
  | [`compute_minimum_eigenvalue`](#qiskit.algorithms.QAOA.compute_minimum_eigenvalue "qiskit.algorithms.QAOA.compute_minimum_eigenvalue")(operator\[, …]) | Computes minimum eigenvalue.                                                                          |
  | [`construct_circuit`](#qiskit.algorithms.QAOA.construct_circuit "qiskit.algorithms.QAOA.construct_circuit")(parameter, operator)                       | Return the circuits used to compute the expectation value.                                            |
  | [`construct_expectation`](#qiskit.algorithms.QAOA.construct_expectation "qiskit.algorithms.QAOA.construct_expectation")(parameter, operator\[, …])     | Generate the ansatz circuit and expectation value measurement, and return their runnable composition. |
  | [`find_minimum`](#qiskit.algorithms.QAOA.find_minimum "qiskit.algorithms.QAOA.find_minimum")(\[initial\_point, ansatz, …])                             | Optimize to find the minimum cost value.                                                              |
  | [`get_energy_evaluation`](#qiskit.algorithms.QAOA.get_energy_evaluation "qiskit.algorithms.QAOA.get_energy_evaluation")(operator\[, …])                | Returns a function handle to evaluates the energy at given parameters for the ansatz.                 |
  | [`get_optimal_circuit`](#qiskit.algorithms.QAOA.get_optimal_circuit "qiskit.algorithms.QAOA.get_optimal_circuit")()                                    | Get the circuit with the optimal parameters.                                                          |
  | [`get_optimal_cost`](#qiskit.algorithms.QAOA.get_optimal_cost "qiskit.algorithms.QAOA.get_optimal_cost")()                                             | Get the minimal cost or energy found by the VQE.                                                      |
  | [`get_optimal_vector`](#qiskit.algorithms.QAOA.get_optimal_vector "qiskit.algorithms.QAOA.get_optimal_vector")()                                       | Get the simulation outcome of the optimal circuit.                                                    |
  | [`get_prob_vector_for_params`](#qiskit.algorithms.QAOA.get_prob_vector_for_params "qiskit.algorithms.QAOA.get_prob_vector_for_params")(…\[, …])        | Helper function to get probability vectors for a set of params                                        |
  | [`get_probabilities_for_counts`](#qiskit.algorithms.QAOA.get_probabilities_for_counts "qiskit.algorithms.QAOA.get_probabilities_for_counts")(counts)   | get probabilities for counts                                                                          |
  | [`print_settings`](#qiskit.algorithms.QAOA.print_settings "qiskit.algorithms.QAOA.print_settings")()                                                   | Preparing the setting of VQE into a string.                                                           |
  | [`supports_aux_operators`](#qiskit.algorithms.QAOA.supports_aux_operators "qiskit.algorithms.QAOA.supports_aux_operators")()                           | Whether computing the expectation value of auxiliary operators is supported.                          |

  ## Attributes

  |                                                                                                          |                                                                                                    |
  | -------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- |
  | [`ansatz`](#qiskit.algorithms.QAOA.ansatz "qiskit.algorithms.QAOA.ansatz")                               | Returns the ansatz.                                                                                |
  | [`expectation`](#qiskit.algorithms.QAOA.expectation "qiskit.algorithms.QAOA.expectation")                | The expectation value algorithm used to construct the expectation measurement from the observable. |
  | [`gradient`](#qiskit.algorithms.QAOA.gradient "qiskit.algorithms.QAOA.gradient")                         | Returns the gradient.                                                                              |
  | [`initial_point`](#qiskit.algorithms.QAOA.initial_point "qiskit.algorithms.QAOA.initial_point")          | Returns initial point                                                                              |
  | [`initial_state`](#qiskit.algorithms.QAOA.initial_state "qiskit.algorithms.QAOA.initial_state")          | Returns: Returns the initial state.                                                                |
  | [`mixer`](#qiskit.algorithms.QAOA.mixer "qiskit.algorithms.QAOA.mixer")                                  | Returns: Returns the mixer.                                                                        |
  | [`optimal_params`](#qiskit.algorithms.QAOA.optimal_params "qiskit.algorithms.QAOA.optimal_params")       | The optimal parameters for the ansatz.                                                             |
  | [`optimizer`](#qiskit.algorithms.QAOA.optimizer "qiskit.algorithms.QAOA.optimizer")                      | Returns optimizer                                                                                  |
  | [`quantum_instance`](#qiskit.algorithms.QAOA.quantum_instance "qiskit.algorithms.QAOA.quantum_instance") | Returns quantum instance.                                                                          |
  | [`setting`](#qiskit.algorithms.QAOA.setting "qiskit.algorithms.QAOA.setting")                            | Prepare the setting of VQE as a string.                                                            |

  ## Members list

  ### ansatz

  <Attribute id="qiskit.algorithms.QAOA.ansatz">
    Returns the ansatz.

    **Return type**

    `Optional`\[`QuantumCircuit`]
  </Attribute>

  ### cleanup\_parameterized\_circuits

  <Function id="qiskit.algorithms.QAOA.cleanup_parameterized_circuits" signature="cleanup_parameterized_circuits()">
    set parameterized circuits to None
  </Function>

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.algorithms.QAOA.compute_minimum_eigenvalue" signature="compute_minimum_eigenvalue(operator, aux_operators=None)">
    Computes minimum eigenvalue. Operator and aux\_operators can be supplied here and if not None will override any already set into algorithm so it can be reused with different operators. While an operator is required by algorithms, aux\_operators are optional. To ‘remove’ a previous aux\_operators array use an empty list here.

    **Parameters**

    *   **operator** (`OperatorBase`) – Qubit operator of the Observable
    *   **aux\_operators** (`Optional`\[`List`\[`Optional`\[`OperatorBase`]]]) – Optional list of auxiliary operators to be evaluated with the eigenstate of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators, total particle count operators so we can get values for these at the ground state.

    **Return type**

    `MinimumEigensolverResult`

    **Returns**

    MinimumEigensolverResult
  </Function>

  ### construct\_circuit

  <Function id="qiskit.algorithms.QAOA.construct_circuit" signature="construct_circuit(parameter, operator)">
    Return the circuits used to compute the expectation value.

    **Parameters**

    *   **parameter** (`Union`\[`List`\[`float`], `List`\[`Parameter`], `ndarray`]) – Parameters for the ansatz circuit.
    *   **operator** (`OperatorBase`) – Qubit operator of the Observable

    **Return type**

    `List`\[`QuantumCircuit`]

    **Returns**

    A list of the circuits used to compute the expectation value.
  </Function>

  ### construct\_expectation

  <Function id="qiskit.algorithms.QAOA.construct_expectation" signature="construct_expectation(parameter, operator, return_expectation=False)">
    Generate the ansatz circuit and expectation value measurement, and return their runnable composition.

    **Parameters**

    *   **parameter** (`Union`\[`List`\[`float`], `List`\[`Parameter`], `ndarray`]) – Parameters for the ansatz circuit.
    *   **operator** (`OperatorBase`) – Qubit operator of the Observable
    *   **return\_expectation** (`bool`) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to compute the standard deviation of the expectation value.

    **Return type**

    `Union`\[`OperatorBase`, `Tuple`\[`OperatorBase`, `ExpectationBase`]]

    **Returns**

    The Operator equalling the measurement of the ansatz `StateFn` by the Observable’s expectation `StateFn`, and, optionally, the expectation converter.

    **Raises**

    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no operator has been provided.
    *   [**AlgorithmError**](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError") – If no expectation is passed and None could be inferred via the ExpectationFactory.
  </Function>

  ### expectation

  <Attribute id="qiskit.algorithms.QAOA.expectation">
    The expectation value algorithm used to construct the expectation measurement from the observable.

    **Return type**

    `Optional`\[`ExpectationBase`]
  </Attribute>

  ### find\_minimum

  <Function id="qiskit.algorithms.QAOA.find_minimum" signature="find_minimum(initial_point=None, ansatz=None, cost_fn=None, optimizer=None, gradient_fn=None)">
    Optimize to find the minimum cost value.

    **Parameters**

    *   **initial\_point** (`Optional`\[`ndarray`]) – If not None will be used instead of any initial point supplied via constructor. If None and None was supplied to constructor then a random point will be used if the optimizer requires an initial point.
    *   **ansatz** (`Optional`\[`QuantumCircuit`]) – If not None will be used instead of any ansatz supplied via constructor.
    *   **cost\_fn** (`Optional`\[`Callable`]) – If not None will be used instead of any cost\_fn supplied via constructor.
    *   **optimizer** (`Optional`\[`Optimizer`]) – If not None will be used instead of any optimizer supplied via constructor.
    *   **gradient\_fn** (`Optional`\[`Callable`]) – Optional gradient function for optimizer

    **Returns**

    Optimized variational parameters, and corresponding minimum cost value.

    **Return type**

    dict

    **Raises**

    **ValueError** – invalid input
  </Function>

  ### get\_energy\_evaluation

  <Function id="qiskit.algorithms.QAOA.get_energy_evaluation" signature="get_energy_evaluation(operator, return_expectation=False)">
    Returns a function handle to evaluates the energy at given parameters for the ansatz.

    This is the objective function to be passed to the optimizer that is used for evaluation.

    **Parameters**

    *   **operator** (`OperatorBase`) – The operator whose energy to evaluate.
    *   **return\_expectation** (`bool`) – If True, return the `ExpectationBase` expectation converter used in the construction of the expectation value. Useful e.g. to evaluate other operators with the same expectation value converter.

    **Return type**

    `Callable`\[\[`ndarray`], `Union`\[`float`, `List`\[`float`]]]

    **Returns**

    Energy of the hamiltonian of each parameter, and, optionally, the expectation converter.

    **Raises**

    **RuntimeError** – If the circuit is not parameterized (i.e. has 0 free parameters).
  </Function>

  ### get\_optimal\_circuit

  <Function id="qiskit.algorithms.QAOA.get_optimal_circuit" signature="get_optimal_circuit()">
    Get the circuit with the optimal parameters.

    **Return type**

    `QuantumCircuit`
  </Function>

  ### get\_optimal\_cost

  <Function id="qiskit.algorithms.QAOA.get_optimal_cost" signature="get_optimal_cost()">
    Get the minimal cost or energy found by the VQE.

    **Return type**

    `float`
  </Function>

  ### get\_optimal\_vector

  <Function id="qiskit.algorithms.QAOA.get_optimal_vector" signature="get_optimal_vector()">
    Get the simulation outcome of the optimal circuit.

    **Return type**

    `Union`\[`List`\[`float`], `Dict`\[`str`, `int`]]
  </Function>

  ### get\_prob\_vector\_for\_params

  <Function id="qiskit.algorithms.QAOA.get_prob_vector_for_params" signature="get_prob_vector_for_params(construct_circuit_fn, params_s, quantum_instance, construct_circuit_args=None)">
    Helper function to get probability vectors for a set of params
  </Function>

  ### get\_probabilities\_for\_counts

  <Function id="qiskit.algorithms.QAOA.get_probabilities_for_counts" signature="get_probabilities_for_counts(counts)">
    get probabilities for counts
  </Function>

  ### gradient

  <Attribute id="qiskit.algorithms.QAOA.gradient">
    Returns the gradient.

    **Return type**

    `Union`\[`GradientBase`, `Callable`, `None`]
  </Attribute>

  ### initial\_point

  <Attribute id="qiskit.algorithms.QAOA.initial_point">
    Returns initial point

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  ### initial\_state

  <Attribute id="qiskit.algorithms.QAOA.initial_state">
    Returns: Returns the initial state.

    **Return type**

    `Optional`\[`QuantumCircuit`]
  </Attribute>

  ### mixer

  <Attribute id="qiskit.algorithms.QAOA.mixer">
    Returns: Returns the mixer.

    **Return type**

    `Union`\[`QuantumCircuit`, `OperatorBase`]
  </Attribute>

  ### optimal\_params

  <Attribute id="qiskit.algorithms.QAOA.optimal_params">
    The optimal parameters for the ansatz.

    **Return type**

    `ndarray`
  </Attribute>

  ### optimizer

  <Attribute id="qiskit.algorithms.QAOA.optimizer">
    Returns optimizer

    **Return type**

    `Optional`\[`Optimizer`]
  </Attribute>

  ### print\_settings

  <Function id="qiskit.algorithms.QAOA.print_settings" signature="print_settings()">
    Preparing the setting of VQE into a string.

    **Returns**

    the formatted setting of VQE

    **Return type**

    str
  </Function>

  ### quantum\_instance

  <Attribute id="qiskit.algorithms.QAOA.quantum_instance">
    Returns quantum instance.

    **Return type**

    `Optional`\[`QuantumInstance`]
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.QAOA.setting">
    Prepare the setting of VQE as a string.
  </Attribute>

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.QAOA.supports_aux_operators" signature="supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenstate of the main operator then it can compute the expectation value of the aux\_operators for that state. Otherwise they will be ignored.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>
</Class>

